--- a/aboutme.html
+++ b/aboutme.html
@@ -13,10 +13,11 @@
 		<p><h5> Having spent most of my life in Boston, Massachusetts, I developed a passion for the urban environment at a young age. It was this admiration which prompted my move to New York City in the fall of 2017, where I began studying Journalism & Design at The New School.
 		<p><h5> Writing and creating art has always been a significant part of my life, and I'm happy to finally share my thoughts and projects with you. </h5></p>
 
-		<p> <u>LINKS</u></p>
+		<p> <b>CONNECT WITH ME</b></p>
 
 		<a href="https://www.rachelxcheung.com"> My Website</a>
-		<a href="https://www.instagram.com/rachelxcheung"> Instagram</a>
+		<a href=""> </a>
+	
 		
 
 
