--- a/aboutme.html
+++ b/aboutme.html
@@ -10,13 +10,18 @@
 
 		<p><h3> <i> About Me </i></h3></p>
 
+		<img src="me.jpg" alt="Picture of Me">
+
 		<p><h5> Having spent most of my life in Boston, Massachusetts, I developed a passion for the urban environment at a young age. It was this admiration which prompted my move to New York City in the fall of 2017, where I began studying Journalism & Design at The New School.
 		<p><h5> Writing and creating art has always been a significant part of my life, and I'm happy to finally share my thoughts and projects with you. </h5></p>
 
 		<p> <b>CONNECT WITH ME</b></p>
 
-		<a href="https://www.rachelxcheung.com"> My Website</a>
-		<a href=""> </a>
+		<a href="https://www.rachelxcheung.com" target="_blank"> WEBSITE</a>
+		<a href="" target="_blank"> SCHOOL PORTFOLIO</a>
+		<a href="" target="_blank"> INSTAGRAM</a>
+		<a href="" target="_blank"> SOMETHING</a>
+
 	
 		
 
