--- a/aboutme.html
+++ b/aboutme.html
@@ -10,17 +10,31 @@
 
 		<p><h3> <i> About Me </i></h3></p>
 
-		<img src="me.jpg" alt="Picture of Me">
+		<img src="mtl.jpeg" alt="Picture of Me">
 
 		<p><h5> Having spent most of my life in Boston, Massachusetts, I developed a passion for the urban environment at a young age. It was this admiration which prompted my move to New York City in the fall of 2017, where I began studying Journalism & Design at The New School.
 		<p><h5> Writing and creating art has always been a significant part of my life, and I'm happy to finally share my thoughts and projects with you. </h5></p>
 
+		<p><u>MISCELLANEOUS THINGS I ENJOY</u></p>
+
+	<ul>
+		<li> Brunch </li>
+		<li> Coffee </li>
+		<li> Sleeping </li>
+		<li> Virginia Woolf </li>
+		<li> My fire escape </li>
+		<li> Silver jewelry </li>
+		<li> Pentel Gel Pen in 0.5 </li>
+		<li> Roses </li>
+		<li> Overthinking </li>
+	</ul>
+
 		<p> <b>CONNECT WITH ME</b></p>
 
-		<a href="https://www.rachelxcheung.com" target="_blank"> WEBSITE</a>
-		<a href="" target="_blank"> SCHOOL PORTFOLIO</a>
-		<a href="" target="_blank"> INSTAGRAM</a>
-		<a href="" target="_blank"> SOMETHING</a>
+		<a href="https://www.linkedin.com/in/rachel-cheung-485398152/" target="_blank" > LINKEDIN</a>
+		<a href="https://www.instagram.com/rachelxcheung" target="_blank"> INSTAGRAM</a>
+		<a href="https://www.facebook.com/rachelxcheung5799" target="_blank" > FACEBOOK</a>
+		<a href="juneres.pdf" target="_blank"> RESUME</a>
 
 	
 		
