--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>RACHEL CHEUNG</title>
+
+		<link rel="stylesheet" href="style2.css">
+
 	</head>
 
 	<body>
@@ -12,21 +15,21 @@
 
 		<img src="mtl.jpeg" alt="Picture of Me">
 
-		<p><h5> Having spent most of my life in Boston, Massachusetts, I developed a passion for the urban environment at a young age. It was this admiration which prompted my move to New York City in the fall of 2017, where I began studying Journalism & Design at The New School.
+		<p id="bio"><h5> Having spent most of my life in Boston, Massachusetts, I developed a passion for the urban environment at a young age. It was this admiration which prompted my move to New York City in the fall of 2017, where I began studying Journalism & Design at The New School.
 		<p><h5> Writing and creating art has always been a significant part of my life, and I'm happy to finally share my thoughts and projects with you. </h5></p>
 
 		<p><u>MISCELLANEOUS THINGS I ENJOY</u></p>
 
 	<ul>
-		<li> Brunch </li>
-		<li> Coffee </li>
-		<li> Sleeping </li>
-		<li> Virginia Woolf </li>
-		<li> My fire escape </li>
-		<li> Silver jewelry </li>
-		<li> Pentel Gel Pen in 0.5 </li>
-		<li> Roses </li>
-		<li> Overthinking </li>
+		<li class="list"> Brunch </li>
+		<li class="list"> Coffee </li>
+		<li class="list"> Sleeping </li>
+		<li class="list"> Virginia Woolf </li>
+		<li class="list"> My fire escape </li>
+		<li class="list"> Silver jewelry </li>
+		<li class="list"> Pentel Gel Pen in 0.5 </li>
+		<li class="list"> Roses </li>
+		<li class="list"> Overthinking </li>
 	</ul>
 
 		<p> <b>CONNECT WITH ME</b></p>
