Update and rename aboutme.html to index2.html
Renamed "aboutme.html" to "index2.html"
Updated code to synch with CSS file style elements

--- a/index2.html
+++ b/index2.html
@@ -13,12 +13,12 @@
 
 		<p><h3> <i> About Me </i></h3></p>
 
-		<img src="mtl.jpeg" alt="Picture of Me">
+		<img src="fire escape.jpeg" alt="Picture of Me">
 
 		<p id="bio"><h5> Having spent most of my life in Boston, Massachusetts, I developed a passion for the urban environment at a young age. It was this admiration which prompted my move to New York City in the fall of 2017, where I began studying Journalism & Design at The New School.
 		<p><h5> Writing and creating art has always been a significant part of my life, and I'm happy to finally share my thoughts and projects with you. </h5></p>
 
-		<p><u>MISCELLANEOUS THINGS I ENJOY</u></p>
+		<p id="subhead">MISCELLANEOUS THINGS I ENJOY</p>
 
 	<ul>
 		<li class="list"> Brunch </li>
